<resources>
    <string name="app_name">Water Manager</string>

    <!-- Login -->
    <string name="lbl_user_login">Usuário</string>
    <string name="lbl_password_login">Senha</string>
    <string name="bt_login">Entrar</string>
    <string name="not_registered_yer_login">Ainda não sou cadastrado</string>
    <string name="username_blank_login">Usuário não pode ficar em branco</string>
    <string name="password_blank_login">Senha não pode ficar em branco</string>
    <string name="login_failed">Usuário ou senha incorretos. Tente novamente</string>

    <!-- Sign Up -->
    <string name="lbl_name_signup">Nome</string>
    <string name="lbl_email_signup">Email</string>
    <string name="lbl_cpf_signup">CPF</string>
    <string name="lbl_user_signup">Usuário</string>
    <string name="lbl_password_signup">Senha</string>
    <string name="lbl_serial_signup">Serial</string>
    <string name="register_signup">Cadastrar</string>
    <string name="name_blank_signup">Nome não pode ficar em branco</string>
    <string name="email_blank_signup">Email não pode ficar em branco</string>
    <string name="cpf_blank_signup">CPF não pode ficar em branco</string>
    <string name="username_blank_signup">Usuário não pode ficar em branco</string>
    <string name="password_blank_signup">Senha não pode ficar em branco</string>
    <string name="serial_blank_signup">Serial não pode ficar em branco</string>
    <string name="signup_failed">Não foi possivel realizar o cadastro. Tente novamente</string>

    <!-- Bottom Navigation Menu -->
    <string name="consumption_menu">Consumo</string>
    <string name="bill_menu">Conta</string>

    <!-- Version Expired -->
    <string name="expired_version">A sua versão do aplicativo está desatualizada. \n \n Baixe a atualização na loja para continuar utilizando</string>
    <string name="bt_playstore_expired">Ir para loja</string>

    <!-- Consumption Fragment -->
    <string name="expectation_consumption">Estimativa mês seguinte:</string>

    <!-- Bill Fragment -->
    <string name="expectation_bill">Estimativa mês seguinte:</string>

    <!-- EmptyConsumption Activity -->
    <string name="empty_consumption">Nenhum consumo cadastrado até o momento :( \n \n Tente novamente mais tarde</string>
</resources>
